doc/v2.0/_sources/reference/generated/ak.forms.IndexedForm.rst.txt
ak.forms.IndexedForm
--------------------

.. py:module: ak.forms.IndexedForm

Defined in `awkward.forms.indexedform <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/forms/indexedform.py>`__ on `line 10 <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/forms/indexedform.py#L10>`__.

.. py:class:: ak.forms.IndexedForm(self, index, content=None, *, parameters=None, form_key=None)



.. _ak-forms-indexedform-is_indexed:

.. py:attribute:: ak.forms.IndexedForm.is_indexed
    :value: True



.. _ak-forms-indexedform-index:

.. py:attribute:: ak.forms.IndexedForm.index



.. _ak-forms-indexedform-content:

.. py:attribute:: ak.forms.IndexedForm.content



.. _ak-forms-indexedform-copy:

.. py:method:: ak.forms.IndexedForm.copy(self, index=unset, content=unset, *, parameters=unset, form_key=unset)



.. _ak-forms-indexedform-simplified:

.. py:method:: ak.forms.IndexedForm.simplified(cls, index, content, *, parameters=None, form_key=None)



.. _ak-forms-indexedform-__repr__:

.. py:method:: ak.forms.IndexedForm.__repr__(self)



.. _ak-forms-indexedform-_to_dict_part:

.. py:method:: ak.forms.IndexedForm._to_dict_part(self, verbose, toplevel)



.. _ak-forms-indexedform-_type:

.. py:method:: ak.forms.IndexedForm._type(self, typestrs)



.. _ak-forms-indexedform-__eq__:

.. py:method:: ak.forms.IndexedForm.__eq__(self, other)



.. _ak-forms-indexedform-purelist_parameter:

.. py:method:: ak.forms.IndexedForm.purelist_parameter(self, key)



.. _ak-forms-indexedform-purelist_isregular:

.. py:attribute:: ak.forms.IndexedForm.purelist_isregular



.. _ak-forms-indexedform-purelist_depth:

.. py:attribute:: ak.forms.IndexedForm.purelist_depth



.. _ak-forms-indexedform-is_identity_like:

.. py:attribute:: ak.forms.IndexedForm.is_identity_like



.. _ak-forms-indexedform-minmax_depth:

.. py:attribute:: ak.forms.IndexedForm.minmax_depth



.. _ak-forms-indexedform-branch_depth:

.. py:attribute:: ak.forms.IndexedForm.branch_depth



.. _ak-forms-indexedform-fields:

.. py:attribute:: ak.forms.IndexedForm.fields



.. _ak-forms-indexedform-is_tuple:

.. py:attribute:: ak.forms.IndexedForm.is_tuple



.. _ak-forms-indexedform-dimension_optiontype:

.. py:attribute:: ak.forms.IndexedForm.dimension_optiontype



.. _ak-forms-indexedform-_columns:

.. py:method:: ak.forms.IndexedForm._columns(self, path, output, list_indicator)



.. _ak-forms-indexedform-_select_columns:

.. py:method:: ak.forms.IndexedForm._select_columns(self, index, specifier, matches, output)



.. _ak-forms-indexedform-_column_types:

.. py:method:: ak.forms.IndexedForm._column_types(self)

