doc/2.4/_sources/reference/generated/ak.forms.IndexedForm.rst.txt
ak.forms.IndexedForm
--------------------

.. py:module: ak.forms.IndexedForm

Defined in `awkward.forms.indexedform <https://github.com/scikit-hep/awkward-1.0/blob/bc11dd632e68aac9d4b5ace9dfb8c2ae81e1c29a/src/awkward/forms/indexedform.py>`__ on `line 19 <https://github.com/scikit-hep/awkward-1.0/blob/bc11dd632e68aac9d4b5ace9dfb8c2ae81e1c29a/src/awkward/forms/indexedform.py#L19>`__.

.. py:class:: ak.forms.IndexedForm(self, index, content=None, *, parameters=None, form_key=None)



.. _ak-forms-indexedform-is_indexed:

.. py:attribute:: ak.forms.IndexedForm.is_indexed
    :value: True



.. _ak-forms-indexedform-index:

.. py:attribute:: ak.forms.IndexedForm.index



.. _ak-forms-indexedform-content:

.. py:attribute:: ak.forms.IndexedForm.content



.. _ak-forms-indexedform-copy:

.. py:method:: ak.forms.IndexedForm.copy(self, index=UNSET, content=UNSET, *, parameters=UNSET, form_key=UNSET)



.. _ak-forms-indexedform-simplified:

.. py:method:: ak.forms.IndexedForm.simplified(cls, index, content, *, parameters=None, form_key=None)



.. _ak-forms-indexedform-__repr__:

.. py:method:: ak.forms.IndexedForm.__repr__(self)



.. _ak-forms-indexedform-_to_dict_part:

.. py:method:: ak.forms.IndexedForm._to_dict_part(self, verbose, toplevel)



.. _ak-forms-indexedform-type:

.. py:attribute:: ak.forms.IndexedForm.type



.. _ak-forms-indexedform-__eq__:

.. py:method:: ak.forms.IndexedForm.__eq__(self, other)



.. _ak-forms-indexedform-purelist_parameters:

.. py:method:: ak.forms.IndexedForm.purelist_parameters(self, *keys)



.. _ak-forms-indexedform-purelist_isregular:

.. py:attribute:: ak.forms.IndexedForm.purelist_isregular



.. _ak-forms-indexedform-purelist_depth:

.. py:attribute:: ak.forms.IndexedForm.purelist_depth



.. _ak-forms-indexedform-is_identity_like:

.. py:attribute:: ak.forms.IndexedForm.is_identity_like



.. _ak-forms-indexedform-minmax_depth:

.. py:attribute:: ak.forms.IndexedForm.minmax_depth



.. _ak-forms-indexedform-branch_depth:

.. py:attribute:: ak.forms.IndexedForm.branch_depth



.. _ak-forms-indexedform-fields:

.. py:attribute:: ak.forms.IndexedForm.fields



.. _ak-forms-indexedform-is_tuple:

.. py:attribute:: ak.forms.IndexedForm.is_tuple



.. _ak-forms-indexedform-dimension_optiontype:

.. py:attribute:: ak.forms.IndexedForm.dimension_optiontype



.. _ak-forms-indexedform-_columns:

.. py:method:: ak.forms.IndexedForm._columns(self, path, output, list_indicator)



.. _ak-forms-indexedform-_prune_columns:

.. py:method:: ak.forms.IndexedForm._prune_columns(self, is_inside_record_or_union)



.. _ak-forms-indexedform-_select_columns:

.. py:method:: ak.forms.IndexedForm._select_columns(self, match_specifier)



.. _ak-forms-indexedform-_column_types:

.. py:method:: ak.forms.IndexedForm._column_types(self)



.. _ak-forms-indexedform-__setstate__:

.. py:method:: ak.forms.IndexedForm.__setstate__(self, state)



.. _ak-forms-indexedform-_expected_from_buffers:

.. py:method:: ak.forms.IndexedForm._expected_from_buffers(self, getkey, recursive)

